src/style/App.css
/* ... */
.category-badges {
  margin: 1rem auto 0 auto;
  margin-bottom: 0.75rem;
  display: flex;
  justify-content: center;
  gap: 0.5rem;
}

.new-indicator {
  width: fit-content;
}

.results .hover-to-reveal {
  margin-top: 0;
  margin-bottom: -0.5rem;
  font-style: italic;
}

.results-goback {
  text-align: center;
  margin-top: 0.75rem;
}

.loading-children .results-goback {
  margin-bottom: 0.75rem;
}

.results-summary {
  padding: 2rem 0;
  border-radius: 0 0.3rem 0.3rem 0;
  margin: auto;
  margin-bottom: 4rem;
  font-family: adobe-garamond-pro, serif;
  font-size: 1rem;
  line-height: 2.2em;
  max-width: 80ch;
  text-align: justify;
  hyphens: auto;
}

.results-summary h1 {
  font-family: trajan-pro-3, serif;
  margin-bottom: 1.5rem;
  font-size: 2.5rem;
  text-align: center;
  line-height: 1.4em;
  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
  margin-top: -1rem;
  padding: 1rem 0;
}

.results-summary .para-primary {
  font-size: 1.3rem;
  line-height: 1.8em;
  opacity: 0.9;
}

.results-summary .para-secondary {
  font-size: 1rem;
  opacity: 0.8;
}

.results-summary .results-goback {
  text-align: left;
}

.result-years {
  margin-top: 15vh;
  text-align: center;
}

.result-years ol {
  padding-left: 0;
  margin: auto;
  display: flex;
  align-items: center;
  justify-content: center;
  list-style: none;
}

.result-years li,
.latest {
  margin: 0.5rem;
  font-size: 24px;
  background-color: rgb(224, 224, 224);
  border-radius: 0.5rem;
  width: fit-content;
  transition: transform 0.2s, background-color 0.2s;
  border: 1px solid rgba(0, 0, 0, 0.05);
}

.result-years li a,
.latest a {
  padding: 1rem 3rem;
  display: block;
}

.latest {
  margin: 1.5rem auto 0 auto;
}

.latest a {
  padding: 1rem 4rem;
}

.result-years .latest a::after {
  content: 'latest';
  font-size: 16px;
  margin-top: -4px;
  margin-right: -0.1em;
  letter-spacing: 0.1em;
  color: rgba(0, 50, 100, 0.8);
  font-style: italic;
  display: block;
}

.result-years li:hover,
.latest:hover {
  transform: translateY(-2px);
  background-color: rgb(216, 216, 216);
}

.latest + * {
  margin-top: 2rem;
}

.voted-for {
  color: #17a2b8;
  opacity: 1 !important;
  margin: 1rem 0 0 0 !important;
}

.results-header + .voted-for {
  text-align: center;
  text-transform: uppercase;
  opacity: 0.8 !important;
  margin: 0.75rem 0 1rem 0 !important;
}

.summary-votecount {
  color: #17a2b8;
  /* padding: 2px 4px;
  border: 1px solid rgba(23, 162, 184, 0.25); */
}

.target-reset-button {
  position: relative;
  display: flex;
}

.target-indicator {
  text-align: center;
  margin-top: 2rem;
}

.target-reset-button > button {
  margin: 0 auto;
  min-height: 48px;
  height: auto;
}

.extra-results + .target-reset-button {
  margin-top: 3rem;
  margin-bottom: 0;
}

.target-reset-button + .results-category .results-header-container {
  margin-top: 3rem;
}

.section-header + .target-indicator {
  margin-top: -1.5rem;
}

.linked-category .results-header-container {
  margin-top: 0;
}

/*=  Media queries  =*/

@media (max-width: 767px) {
  #user {
    margin: 0;
    position: relative;
    width: 100%;
    padding: 0.75rem 0;
    bottom: -0.5rem;
    z-index: 1;
    background: none;
  }

  .collapse.show #user-backfill {
    position: absolute;
    background: rgb(24, 24, 24);
    width: 200%;
    left: -50%;
    height: 56px;
    z-index: 0;
    bottom: -8px;
    transition: background 0.3s;
  }

  .navbar-toggler {
    margin-left: auto;
  }

  .logInOrOut span {
    margin-left: 0;
  }

  #login {
    width: 100%;
  }

  #user {
    max-width: 100%;
  }

  #logout {
    margin-left: auto;
    margin-right: 0;
  }

  nav.expanded {
    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.5);
  }

  .nav-overlay.active-overlay {
    width: 100vw;
    height: 100vh;
    background-color: rgba(0, 0, 0, 0.5);
    z-index: 100;
  }

  .results-entries,
  .extra-results > div {
    width: 100%;
  }

  #floating-toc-btn {
    bottom: 1.5rem;
    right: 1.5rem;
  }

  .results-category .category-description {
    max-width: 90%;
  }
}

@media (max-width: 991px) {
  .results-header > h2 {
    font-size: 30px;
  }

  .results-header > img {
    max-height: calc(15px + 10vw);
  }
}

@media (min-width: 1280px) {
  .container {
    max-width: 1262px;
  }
}
/* ... */

